src/scss/calmdown.scss
$colorGrayLighter: #f8f8f8;
$colorGrayLight: #d1d1d1;
$colorGrayDark: #484848;

.calmdown-default-theme{
  display: flex;
  border: 1px solid $colorGrayLight;
  flex-direction: column;
  overflow: hidden;
  .cd-toolbar{
    padding: 5px;
    background-color: $colorGrayLighter;
    border-bottom: 1px solid $colorGrayLight;
  }
  .cd-body{
    flex: 1;
    display: flex;
    .cd-editor{
      flex: 1 1 50%;
      max-width: 50%;
      padding: 10px;
      border: 0;
      background-color: white;
      border-right: 1px solid $colorGrayLight;
      resize: none;
      overflow-y: auto;
      overflow-x: hidden;
      &:focus{
        outline: 0;
      }
    }
    .cd-preview{
      flex: 1 1 50%;
      max-width: 50%;
      padding: 10px;
      background-color: white;
      word-wrap: break-word;
      overflow-y: auto;
      overflow-x: hidden;
    }
  }
  .cd-resize{
    display: flex;
    align-items: center;
    justify-content: center;
    height: 10.5px;
    background-color: $colorGrayLighter;
    border-top: 1px solid $colorGrayLight;
    cursor: s-resize;
    .cd-bars{
      width: 25px;
      height: 1px;
      position: relative;
      background-color: $colorGrayLight;
      &:before,
      &:after{
        content: '';
        display: block;
        position: absolute;
        width: 25px;
        height: 1px;
        background-color: $colorGrayLight;
      }
      &:before{
       top: -2px;
      }
      &:after{
        bottom: -2px;
      }
    }
  }
}

// Highlight.js style : okaidia theme
// TODO: add more style and set to be able to switch between them
.cd-highlight-default{
  /**
   * okaidia theme for JavaScript, CSS and HTML
   * Loosely based on Monokai textmate theme by http://www.monokai.nl/
   * @author ocodia
   */

  code[class*="language-"],
  pre[class*="language-"] {
    color: #f8f8f2;
    background: none;
    text-shadow: 0 1px rgba(0, 0, 0, 0.3);
    font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
    text-align: left;
    white-space: pre;
    word-spacing: normal;
    word-break: normal;
    word-wrap: normal;
    line-height: 1.5;
    tab-size: 4;
    hyphens: none;
  }

  /* Code blocks */
  pre[class*="language-"] {
    padding: 1em;
    margin: .5em 0;
    overflow: auto;
    border-radius: 0.3em;
  }

  :not(pre) > code[class*="language-"],
  pre[class*="language-"] {
    background: #272822;
  }

  /* Inline code */
  :not(pre) > code[class*="language-"] {
    padding: .1em;
    border-radius: .3em;
    white-space: normal;
  }

  .token.comment,
  .token.prolog,
  .token.doctype,
  .token.cdata {
    color: slategray;
  }

  .token.punctuation {
    color: #f8f8f2;
  }

  .namespace {
    opacity: .7;
  }

  .token.property,
  .token.tag,
  .token.constant,
  .token.symbol,
  .token.deleted {
    color: #f92672;
  }

  .token.boolean,
  .token.number {
    color: #ae81ff;
  }

  .token.selector,
  .token.attr-name,
  .token.string,
  .token.char,
  .token.builtin,
  .token.inserted {
    color: #a6e22e;
  }

  .token.operator,
  .token.entity,
  .token.url,
  .language-css .token.string,
  .style .token.string,
  .token.variable {
    color: #f8f8f2;
  }

  .token.atrule,
  .token.attr-value,
  .token.function {
    color: #e6db74;
  }

  .token.keyword {
    color: #66d9ef;
  }

  .token.regex,
  .token.important {
    color: #fd971f;
  }

  .token.important,
  .token.bold {
    font-weight: bold;
  }
  .token.italic {
    font-style: italic;
  }

  .token.entity {
    cursor: help;
  }
}

